--- a/.github/workflows/tests-tickets.yml
+++ b/.github/workflows/tests-tickets.yml
@@ -1,13 +1,15 @@
 name: tests-tickets
 
 on:
-  pull_request
+  pull_request:
+    paths:
+      - "payments/**"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd tickets && npm ci  # Use 'npm ci' instead of 'npm install'
-      - run: cd tickets && npx jest --version  # Check if Jest is available
+      - run: cd tickets && npm ci # Use 'npm ci' instead of 'npm install'
+      - run: cd tickets && npx jest --version # Check if Jest is available
       - run: cd tickets && npm install && npm run test:ci
